--- a/.editorconfig
+++ b/.editorconfig
@@ -5,12 +5,19 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 4
+tab_width = 8
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
 
 # Use tabs for indentation on go files
 [Makefile]
 indent_style = tab
 
 # Use 2 space indentation for markdown and json
-[*.{md,json}]
+[*.md]
 indent_style = space
 indent_size = 2
+
